--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -5,212 +5,218 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView3" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView4" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView5" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView6" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView7" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView8" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView9" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView10" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView11" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView12" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView13" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView14" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView15" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView16" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView17" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView18" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView19" />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView20" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView21" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView22" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView23" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView24" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView25" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView26" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView27" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView28" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView29" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView30" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView31" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView32" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView33" />
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView34" />
 
 
     <TextView
-        android:text="lat/lng:"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView35" />
